Added more functionalities like track order, remove order and add more items.

--- a/chatbox/templates/index.html
+++ b/chatbox/templates/index.html
@@ -23,6 +23,7 @@
   <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
   <df-messenger
     intent="WELCOME"
+    allow="microphone"
     chat-title="Neel-chat-bot"
     agent-id="d61ce8ea-7586-4f6e-94d3-665194fdc707"
     language-code="en"
